--- a/D7/minc.html
+++ b/D7/minc.html
@@ -42,8 +42,8 @@
 </head>
 
 <body>
-    <h3 class="color-property,text-align">Helloooo!!!!!</h3>
-    <p class="font-size,line-height,box">The domestic cat, or house cat, is a small mammal that has lived among people for thousands of years. People have kept cats as pets, used them as hunters, and even worshiped them as gods. Domestic cats belong to the same animal family as the lion, tiger, jaguar, leopard, puma, and cheetah.</p>
+    <h3 class="color-property text-align">Helloooo!!!!!</h3>
+    <p class="font-size line-height box">The domestic cat, or house cat, is a small mammal that has lived among people for thousands of years. People have kept cats as pets, used them as hunters, and even worshiped them as gods. Domestic cats belong to the same animal family as the lion, tiger, jaguar, leopard, puma, and cheetah.</p>
 <a class="text-decoration" href="https://github.com/khushr19/HTML.git">My github link</a>
 </body>
 
